scrollbar fixed styled

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,28 @@
 * {
   scroll-behavior: smooth;
 }
+body {
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 50px rgb(0, 0, 0);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: aqua;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #f2b137;
+}
 
 .text-gradient {
   background: radial-gradient(
